@@ -47,7 +47,7 @@
   },
   "resources" : [ ],
   "source-url" : "git://github.com/p6-pdf/PDF-Content-p6.git",
-  "tags" : [ ],
+  "tags" : [ "pdf" ],
   "test-depends" : [ ],
   "version" : "0.2.2"
 }
